...
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="Segunda"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="Terça"
...
            android:layout_marginRight="25dp"
            android:layout_marginBottom="18dp"
            android:max="15"
            android:progress="1" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ratingsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/rating_item" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
...
